@@ -12,6 +12,7 @@ Changes for 1.7.0
 
 Changes for 1.6.2
 
+ - [DEV-254] improved server side logging (Sasha)
  - [ZBX-602] fixed possible incorrect trigger evaluation if value sotred as "delta" (Sasha)
  - [DEV-268] added support of net.if.in/out/total under AIX (Sasha)
  - [DEV-268] added support of system.cpu.num/util/load/intr/switches, system.uptime under AIX (Sasha)
